milestone2a/modules/network_3_tier/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags   = { Name = local.name_igw }
}
