milestone2a/modules/network_3_tier/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr_block
  tags       = { Name = local.name_vpc }
}
